@@ -96,6 +96,8 @@ class OvmsLocations
   public:
     bool m_ready;
     bool m_gpslock;
+    int m_gpssq;
+    bool m_gpsgood;
     float m_latitude;
     float m_longitude;
     float m_park_latitude;
@@ -113,8 +115,8 @@ class OvmsLocations
 
   public:
     void UpdatedGpsLock(OvmsMetric* metric);
-    void UpdatedLatitude(OvmsMetric* metric);
-    void UpdatedLongitude(OvmsMetric* metric);
+    void UpdatedGpsSQ(OvmsMetric* metric);
+    void UpdatedPosition(OvmsMetric* metric);
     void UpdatedVehicleOn(OvmsMetric* metric);
     void UpdatedConfig(std::string event, void* data);
   };
